--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,7 @@
     <string name="app_name">Quản lý thu chi cá nhân</string>
     <!-- Strings related to login -->
     <string name="prompt_email">Email</string>
+    <string name="LoaiThanhToan">Loại thanh toán</string>
     <string name="prompt_password">Password</string>
     <string name="action_sign_in">Sign in or register</string>
     <string name="action_sign_in_short">Sign in</string>
@@ -18,10 +19,19 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="FirstName">Họ</string>
     <string name="Password">Mật khẩu</string>
+    <string name="CategoryThu">Danh mục thu</string>
     <string name="Save">lưu</string>
     <string name="LastName">Tên</string>
     <string name="MoneyPerDay">Số tiền thông báo khi sài quá trong 1 ngày</string>
     <string name="EditInformation">Chỉnh sửa thông tin</string>
+    <string name="NewThu">Thu nhập mới</string>
     <string name="Login">Đăng nhập</string>
     <string name="CreateAccount">Tạo tài khoản</string>
+    <string name="title_activity_action_them_thu">ActionThemThu</string>
+    <!--
+    This string is used for square devices and overridden by hello_world in
+    values-round/strings.xml for round devices.
+    -->
+    <string name="hello_world">Hello Square World!</string>
+    <string name="title_activity_them_thu">ThemThuActivity</string>
 </resources>
