--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,18 +39,13 @@
     <string-array name="thoigian_thong_ke">
         <item>Tất cả</item>
         <item>Ngày</item>
-        <item>Tuần</item>
         <item>Tháng</item>
+        <item>Năm</item>
     </string-array>
     <string-array name="loai_thong_ke">
         <item>Tất cả</item>
-        <item>Ăn sáng</item>
-        <item>Ăn trưa</item>
-        <item>Ăn tối</item>
-        <item>Thức ăn</item>
-        <item>Ăn vặt</item>
-        <item>Xăng</item>
-        <item>Chi tiêu cá nhân</item>
+        <item>Thu</item>
+        <item>Chi</item>
     </string-array>
     <string-array name="loai_chi">
         <item>Ăn sáng</item>
