--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -37,13 +37,11 @@
     <string name="title_activity_chi_tiet_thong_ke">ChiTietThongKe</string>
 
     <string-array name="thoigian_thong_ke">
-        <item>Tất cả</item>
         <item>Ngày</item>
         <item>Tháng</item>
         <item>Năm</item>
     </string-array>
     <string-array name="loai_thong_ke">
-        <item>Tất cả</item>
         <item>Thu</item>
         <item>Chi</item>
     </string-array>
@@ -57,27 +55,33 @@
         <item>Chi tiêu cá nhân</item>
     </string-array>
     <string-array name="thang">
-        <item>Tháng 1</item>
-        <item>Tháng 2</item>
-        <item>Tháng 3</item>
-        <item>Tháng 4</item>
-        <item>Tháng 5</item>
-        <item>Tháng 6</item>
-        <item>Tháng 7</item>
-        <item>Tháng 8</item>
-        <item>Tháng 9</item>
-        <item>Tháng 10</item>
-        <item>Tháng 11</item>
-        <item>Tháng 12</item>
+        <item>1</item>
+        <item>2</item>
+        <item>3</item>
+        <item>4</item>
+        <item>5</item>
+        <item>6</item>
+        <item>7</item>
+        <item>8</item>
+        <item>9</item>
+        <item>10</item>
+        <item>11</item>
+        <item>12</item>
     </string-array>
-    <string-array name="nam">
+<!--    <string-array name="nam">
     <item>Năm 2018</item>
     <item>Năm 2019</item>
     <item>Năm 2020</item>
     <item>Năm 2021</item>
-</string-array>
+    </string-array>-->
+    <string-array name="nam">
+        <item>2021</item>
+        <item>2020</item>
+        <item>2019</item>
+        <item>2018</item>
+        <item>2017</item>
+    </string-array>
     <string-array name="loai_thu">
-
         <item>Tiền lương</item>
         <item>Thu nhập thêm</item>
         <item>Khác</item>
